crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enums__anon_enum_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/enums.rs
assertion_line: 66
expression: "goto_definition(r#\"\n%! main.sp\nenum {\n    Bar,\n}\n\nint foo() {\n    return Bar;\n           |\n           ^\n};\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 5,
        "character": 11
      },
      "end": {
        "line": 5,
        "character": 14
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
